syntax = "proto3";

import "User.proto";
import "UserResponse.proto";

package com.ms;
option java_multiple_files = true;
option java_outer_classname = "UserServiceApiProto";
option java_package = "com.ms";

service UserServiceApi {
    // Creates a new user
    rpc CreateUser(User) returns (UserResponse);
    // Gets a user by ID
    rpc GetUser(User) returns (User);
}